@@ -33,7 +33,8 @@
 </td></tr><tr valign="top"><td valign="baseline" nowrap><i>boolean</i></td><td valign="baseline">&nbsp;&nbsp;&nbsp;&nbsp;</td><td valign="baseline"> A <a href="ref-glossary.html#id81">generalized&nbsp;boolean</a>
 </td></tr></table>
 </p>
-<p><span class="fndoclabel">Returns</span> <br />True if all <a href="ref-glossary.html#gl:link-slot">link-slot</a> definitions are consistent; <code>nil</code> otherwise. 
+<p><span class="fndoclabel">Returns</span> <br />True if all <a href="ref-glossary.html#gl:link-slot">link-slot</a> definitions are consistent; <code>nil</code>
+otherwise.
 </p>
 <p><span class="fndoclabel">Description</span> <br />If a link inconsistency is found, details of the inconsistency
 are printed to <nobr><code>*standard-output*</code></nobr>.  For clarity, only the first
