@@ -49,6 +49,6 @@
 <li><a href="ref-index.html">Index</a></li>
 </ul>
 <hr /><address><a target="_top" class="address"
-    href="http://GBBopen.org/"><p>The GBBopen Project</a>,<nobr>&nbsp;October 27, 2009</nobr>
-<nobr>22:16&nbsp;EDT</nobr></address><br />
+    href="http://GBBopen.org/"><p>The GBBopen Project</a>,<nobr>&nbsp;October 28, 2009</nobr>
+<nobr>12:55&nbsp;EDT</nobr></address><br />
 </body></html>
